--- a/src/TQVaultAE.GUI/TQVaultAE.GUI.csproj
+++ b/src/TQVaultAE.GUI/TQVaultAE.GUI.csproj
@@ -181,6 +181,42 @@
       <DependentUpon>MainForm.cs</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Tiny\Controls\Bag.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Tiny\Controls\Bag.Designer.cs">
+      <DependentUpon>Bag.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Tiny\Controls\Equipment.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Tiny\Controls\Equipment.Designer.cs">
+      <DependentUpon>Equipment.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Tiny\Controls\VaultSink.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Tiny\Controls\VaultSink.Designer.cs">
+      <DependentUpon>VaultSink.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Tiny\Controls\VaultClassic.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Tiny\Controls\VaultClassic.Designer.cs">
+      <DependentUpon>VaultClassic.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Tiny\Controls\Inventory.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Tiny\Controls\Inventory.Designer.cs">
+      <DependentUpon>Inventory.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Tiny\MainForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Tiny\MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\AutoMoveLocation.cs" />
     <Compile Include="Components\AutoSortButton.cs">
       <SubType>Component</SubType>
@@ -230,6 +266,11 @@
     <Compile Include="Models\SearchDialogAdvanced\BoxTag.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="SearchDialogAdvanced.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -293,6 +334,7 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Models\WindowMenuEventArgs.cs" />
+    <Content Include="Tiny\ReadMe.txt" />
     <EmbeddedResource Include="AboutBox.resx">
       <SubType>Designer</SubType>
       <DependentUpon>AboutBox.cs</DependentUpon>
@@ -334,6 +376,29 @@
     <EmbeddedResource Include="MainForm.resx">
       <SubType>Designer</SubType>
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Tiny\Controls\Bag.resx">
+      <DependentUpon>Bag.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Tiny\Controls\Equipment.resx">
+      <DependentUpon>Equipment.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Tiny\Controls\VaultSink.resx">
+      <DependentUpon>VaultSink.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Tiny\Controls\VaultClassic.resx">
+      <DependentUpon>VaultClassic.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Tiny\Controls\Inventory.resx">
+      <DependentUpon>Inventory.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Tiny\MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="ResultsDialog.resx">
       <DependentUpon>ResultsDialog.cs</DependentUpon>
@@ -620,6 +685,9 @@
     <PackageReference Include="System.Xml.XDocument">
       <Version>4.3.0</Version>
     </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Resources\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
