--- a/src/TQSaveFilesExplorer/TQ.SaveFilesExplorer.csproj
+++ b/src/TQSaveFilesExplorer/TQ.SaveFilesExplorer.csproj
@@ -170,10 +170,12 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>XCOPY "$(ProjectDir)bin\$(ConfigurationName)" "$(SolutionDir)bin\$(ConfigurationName)" /y /s /i
-
-REM Clean output of unnecessary files
-DEL "$(SolutionDir)bin\$(ConfigurationName)\*.pdb"
+    <PostBuildEvent>REM Copy Build
+SET SOLDIR=$(SolutionDir)
+SET PLATFORM=.
+SET CONFNAME=$(ConfigurationName)
+SET PROJDIR=$(ProjectDir)
+CALL "%25SOLDIR%25src\publishtobin.bat"
 </PostBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
