--- a/src/TQSaveFilesExplorer/TQ.SaveFilesExplorer.csproj
+++ b/src/TQSaveFilesExplorer/TQ.SaveFilesExplorer.csproj
@@ -166,7 +166,19 @@
       <Version>10.1.1</Version>
     </PackageReference>
     <PackageReference Include="Enums.NET">
-      <Version>4.0.0</Version>
+      <Version>5.0.0</Version>
+    </PackageReference>
+    <PackageReference Include="NAudio">
+      <Version>2.2.1</Version>
+    </PackageReference>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>13.0.4</Version>
+    </PackageReference>
+    <PackageReference Include="System.Configuration.ConfigurationManager">
+      <Version>10.0.2</Version>
+    </PackageReference>
+    <PackageReference Include="System.Runtime.CompilerServices.Unsafe">
+      <Version>6.1.2</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
