--- a/src/TQVaultAE.Data/TQVaultAE.Data.csproj
+++ b/src/TQVaultAE.Data/TQVaultAE.Data.csproj
@@ -24,10 +24,12 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.1" />
+		<PackageReference Include="Enums.NET" Version="5.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.2" />
 		<PackageReference Include="Newtonsoft.Json">
-			<Version>13.0.1</Version>
+			<Version>13.0.4</Version>
 		</PackageReference>
+		<PackageReference Include="System.Configuration.ConfigurationManager" Version="10.0.2" />
 	</ItemGroup>
 
 	<ItemGroup>
