--- a/src/TQVaultAE.Presentation/TQVaultAE.Presentation.csproj
+++ b/src/TQVaultAE.Presentation/TQVaultAE.Presentation.csproj
@@ -33,11 +33,12 @@
 
 	<ItemGroup>
 		<PackageReference Include="DDSReader" Version="1.0.8-pre" />
-		<PackageReference Include="Enums.NET" Version="4.0.0" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.1" />
-		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-		<PackageReference Include="System.Drawing.Common" Version="6.0.0" />
-		<PackageReference Include="System.Resources.Extensions" Version="6.0.0" />
+		<PackageReference Include="Enums.NET" Version="5.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.2" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
+		<PackageReference Include="System.Configuration.ConfigurationManager" Version="10.0.2" />
+		<PackageReference Include="System.Drawing.Common" Version="10.0.2" />
+		<PackageReference Include="System.Resources.Extensions" Version="10.0.2" />
 	</ItemGroup>
 
 	<ItemGroup>
