--- a/src/TQVaultAE.Services.Win32/TQVaultAE.Services.Win32.csproj
+++ b/src/TQVaultAE.Services.Win32/TQVaultAE.Services.Win32.csproj
@@ -124,17 +124,23 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Enums.NET">
+      <Version>5.0.0</Version>
+    </PackageReference>
     <PackageReference Include="MedallionShell">
       <Version>1.6.2</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions">
-      <Version>6.0.1</Version>
+      <Version>10.0.2</Version>
     </PackageReference>
     <PackageReference Include="NAudio">
-      <Version>2.1.0</Version>
+      <Version>2.2.1</Version>
+    </PackageReference>
+    <PackageReference Include="System.Configuration.ConfigurationManager">
+      <Version>10.0.2</Version>
     </PackageReference>
     <PackageReference Include="System.Drawing.Common">
-      <Version>6.0.0</Version>
+      <Version>10.0.2</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
