--- a/src/TQVaultAE.Data/TQVaultAE.Data.csproj
+++ b/src/TQVaultAE.Data/TQVaultAE.Data.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
@@ -26,10 +26,8 @@
 	<ItemGroup>
 		<PackageReference Include="Enums.NET" Version="5.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.2" />
-		<PackageReference Include="Newtonsoft.Json">
-			<Version>13.0.4</Version>
-		</PackageReference>
 		<PackageReference Include="System.Configuration.ConfigurationManager" Version="10.0.2" />
+		<PackageReference Include="System.Text.Json" Version="9.0.4" />
 	</ItemGroup>
 
 	<ItemGroup>
