--- a/src/TQVaultAE.Presentation/TQVaultAE.Presentation.csproj
+++ b/src/TQVaultAE.Presentation/TQVaultAE.Presentation.csproj
@@ -4,6 +4,7 @@
 		<TargetFramework>netstandard2.0</TargetFramework>
 		<Platforms>AnyCPU;x64;x86</Platforms>
 		<LangVersion>10</LangVersion>
+		<Version>4.4.0.0</Version>
 		<GenerateResourceUsePreserializedResources>true</GenerateResourceUsePreserializedResources>
 	</PropertyGroup>
 
@@ -32,9 +33,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		
+
 		<PackageReference Include="Enums.NET" Version="5.0.0" />
-		
+
 		<PackageReference Include="Magick.NET-Q8-AnyCPU" Version="14.10.2" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.2" />
 		<PackageReference Include="System.Configuration.ConfigurationManager" Version="10.0.2" />
