Fix publish test results

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -135,8 +135,8 @@ jobs:
         path: '**/TestResults/*.trx'
         retention-days: 3
     
-    - name: Publish test results
-      uses: EnricoMi/publish-unit-test-result-action@v2
+    - name: Publish Test Results
+      uses: EnricoMi/publish-unit-test-result-action/windows@v2
       if: always()
       with:
         files: '**/TestResults/*.trx'
