--- a/.github/workflows/auto-version.yml
+++ b/.github/workflows/auto-version.yml
@@ -32,7 +32,7 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add -u
-          git commit -m "chore: sync version from version-info.json" || echo "No changes to commit"
+          git commit -m "chore: sync version from version-info.json [skip ci]" || echo "No changes to commit"
           git push || echo "Nothing to push"
 
       - name: Setup MSBuild path
