--- a/src/TQVaultAE.Services.Win32/TQVaultAE.Services.Win32.csproj
+++ b/src/TQVaultAE.Services.Win32/TQVaultAE.Services.Win32.csproj
@@ -1,147 +1,40 @@
-<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <PropertyGroup>
-    <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
-  </PropertyGroup>
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
-  <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E7A1426B-E531-4D67-9272-18DA5AE79484}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TQVaultAE.Services.Win32</RootNamespace>
-    <AssemblyName>TQVaultAE.Services.Win32</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <Deterministic>true</Deterministic>
-    <RuntimeIdentifier>win</RuntimeIdentifier>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <LangVersion>10</LangVersion>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <LangVersion>10</LangVersion>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
-    <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\x64\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <DebugType>full</DebugType>
-    <PlatformTarget>x64</PlatformTarget>
-    <LangVersion>10</LangVersion>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
-    <OutputPath>bin\x64\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <Optimize>true</Optimize>
-    <DebugType>pdbonly</DebugType>
-    <PlatformTarget>x64</PlatformTarget>
-    <LangVersion>10</LangVersion>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
-    <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\x86\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <DebugType>full</DebugType>
-    <PlatformTarget>x86</PlatformTarget>
-    <LangVersion>10</LangVersion>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
-    <OutputPath>bin\x86\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <Optimize>true</Optimize>
-    <DebugType>pdbonly</DebugType>
-    <PlatformTarget>x86</PlatformTarget>
-    <LangVersion>10</LangVersion>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="Microsoft.VisualBasic" />
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="AddFontToOSWin.cs" />
-    <Compile Include="GameFileServiceWin.cs" />
-    <Compile Include="GamePathServiceWin.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SoundServiceWin.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\TQVaultAE.Config\TQVaultAE.Config.csproj">
-      <Project>{2434d5c6-efbb-414d-93d6-2236fa62c0bc}</Project>
-      <Name>TQVaultAE.Config</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\TQVaultAE.Domain\TQVaultAE.Domain.csproj">
-      <Project>{2A8E56BC-4567-4E29-A67D-202E39FC1748}</Project>
-      <Name>TQVaultAE.Domain</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\TQVaultAE.Logs\TQVaultAE.Logs.csproj">
-      <Project>{a3715670-c701-4623-b9ba-9a48fca95adc}</Project>
-      <Name>TQVaultAE.Logs</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\TQVaultAE.Presentation\TQVaultAE.Presentation.csproj">
-      <Project>{6E20606D-9460-469F-B340-D3418165A19B}</Project>
-      <Name>TQVaultAE.Presentation</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\TQVaultAE.Services\TQVaultAE.Services.csproj">
-      <Project>{23f812fb-b5c7-4022-90a7-3b8d7a793e6a}</Project>
-      <Name>TQVaultAE.Services</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Enums.NET">
-      <Version>5.0.0</Version>
-    </PackageReference>
-    <PackageReference Include="MedallionShell">
-      <Version>1.6.2</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions">
-      <Version>10.0.2</Version>
-    </PackageReference>
-    <PackageReference Include="NAudio">
-      <Version>2.2.1</Version>
-    </PackageReference>
-    <PackageReference Include="System.Configuration.ConfigurationManager">
-      <Version>10.0.2</Version>
-    </PackageReference>
-    <PackageReference Include="System.Drawing.Common">
-      <Version>10.0.2</Version>
-    </PackageReference>
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+<Project Sdk="Microsoft.NET.Sdk">
+
+	<PropertyGroup>
+		<TargetFramework>net48</TargetFramework>
+		<OutputType>Library</OutputType>
+		<RootNamespace>TQVaultAE.Services.Win32</RootNamespace>
+		<AssemblyName>TQVaultAE.Services.Win32</AssemblyName>
+		<Version>4.4.0.0</Version>
+		<LangVersion>latest</LangVersion>
+		<GenerateResourceUsePreserializedResources>true</GenerateResourceUsePreserializedResources>
+		<Platforms>AnyCPU;x64;x86</Platforms>
+		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+		<UseWindowsForms>true</UseWindowsForms>
+		<AssemblyTitle>TQVaultAE.Services.Win32</AssemblyTitle>
+		<AssemblyCompany>titanquest.net community</AssemblyCompany>
+		<AssemblyProduct>TQVaultAE.Services.Win32</AssemblyProduct>
+		<AssemblyCopyright>Copyright © 2019</AssemblyCopyright>
+		<ComVisible>false</ComVisible>
+	</PropertyGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\TQVaultAE.Config\TQVaultAE.Config.csproj" />
+		<ProjectReference Include="..\TQVaultAE.Domain\TQVaultAE.Domain.csproj" />
+		<ProjectReference Include="..\TQVaultAE.Logs\TQVaultAE.Logs.csproj" />
+		<ProjectReference Include="..\TQVaultAE.Presentation\TQVaultAE.Presentation.csproj" />
+		<ProjectReference Include="..\TQVaultAE.Services\TQVaultAE.Services.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="Enums.NET" Version="5.0.0" />
+		<PackageReference Include="MedallionShell" Version="1.6.2" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.2" />
+		<PackageReference Include="Microsoft.VisualBasic" Version="10.3.0" />
+		<PackageReference Include="NAudio" Version="2.2.1" />
+		<PackageReference Include="System.Configuration.ConfigurationManager" Version="10.0.2" />
+		<PackageReference Include="System.Drawing.Common" Version="10.0.2" />
+		<PackageReference Include="System.Resources.Extensions" Version="10.0.2" />
+	</ItemGroup>
+
 </Project>
