--- a/src/TQVaultAE.Data/TQVaultAE.Data.csproj
+++ b/src/TQVaultAE.Data/TQVaultAE.Data.csproj
@@ -2,25 +2,18 @@
 
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
-		<Version>3.0.0</Version>
+		<PlatformTarget>AnyCPU</PlatformTarget>
+		<Version>4.4.0.0</Version>
 		<Description>Data layer</Description>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageProjectUrl>https://github.com/EtienneLamoureux/TQVaultAE</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/EtienneLamoureux/TQVaultAE</RepositoryUrl>
 		<RepositoryType>Github</RepositoryType>
-		<Platforms>AnyCPU;x64;x86</Platforms>
-	</PropertyGroup>
-
-	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-		<LangVersion>10</LangVersion>
-	</PropertyGroup>
-
-	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-		<LangVersion>10</LangVersion>
+		<LangVersion>latest</LangVersion>
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <Compile Include="..\IsExternalInit.cs" Link="IsExternalInit.cs" />
+		<Compile Include="..\IsExternalInit.cs" Link="IsExternalInit.cs" />
 	</ItemGroup>
 
 	<ItemGroup>
