--- a/src/TQVaultAE.Logs/TQVaultAE.Logs.csproj
+++ b/src/TQVaultAE.Logs/TQVaultAE.Logs.csproj
@@ -1,30 +1,23 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>3.0.0</Version>
-    <Description>Logging layer</Description>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageProjectUrl>https://github.com/EtienneLamoureux/TQVaultAE</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/EtienneLamoureux/TQVaultAE</RepositoryUrl>
-    <RepositoryType>Github</RepositoryType>
-    <Platforms>AnyCPU;x64;x86</Platforms>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>netstandard2.0</TargetFramework>
+		<PlatformTarget>AnyCPU</PlatformTarget>
+		<Version>4.4.0.0</Version>
+		<Description>Logging layer</Description>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<PackageProjectUrl>https://github.com/EtienneLamoureux/TQVaultAE</PackageProjectUrl>
+		<RepositoryUrl>https://github.com/EtienneLamoureux/TQVaultAE</RepositoryUrl>
+		<RepositoryType>Github</RepositoryType>
+		<LangVersion>latest</LangVersion>
+	</PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <LangVersion>7.1</LangVersion>
-  </PropertyGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.2" />
+		<PackageReference Include="System.Collections.Specialized" Version="4.3.0" />
+		<PackageReference Include="System.Configuration.ConfigurationManager" Version="10.0.2" />
+	</ItemGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <LangVersion>7.1</LangVersion>
-  </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.2" />
-    <PackageReference Include="System.Collections.Specialized" Version="4.3.0" />
-    <PackageReference Include="System.Configuration.ConfigurationManager" Version="10.0.2" />
-  </ItemGroup>
-
-  <!-- PreBuild target removed due to build issues -->
+	<!-- PreBuild target removed due to build issues -->
 
 </Project>
