--- a/src/TQVaultAE.Services/TQVaultAE.Services.csproj
+++ b/src/TQVaultAE.Services/TQVaultAE.Services.csproj
@@ -1,38 +1,32 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <Platforms>AnyCPU;x64;x86</Platforms>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>netstandard2.0</TargetFramework>
+		<PlatformTarget>AnyCPU</PlatformTarget>
+		<Version>4.4.0.0</Version>
+		<LangVersion>latest</LangVersion>
+	</PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <LangVersion>10</LangVersion>
-  </PropertyGroup>
+	<ItemGroup>
+		<PackageReference Include="Enums.NET" Version="5.0.0" />
+		<PackageReference Include="MedallionShell" Version="1.6.2" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.2" />
+		<PackageReference Include="System.Collections" Version="4.3.0" />
+		<PackageReference Include="System.Configuration.ConfigurationManager" Version="10.0.2" />
+		<PackageReference Include="System.Text.Json" Version="10.0.2" />
+	</ItemGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <LangVersion>10</LangVersion>
-  </PropertyGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\TQVaultAE.Config\TQVaultAE.Config.csproj" />
+		<ProjectReference Include="..\TQVaultAE.Domain\TQVaultAE.Domain.csproj" />
+		<ProjectReference Include="..\TQVaultAE.Logs\TQVaultAE.Logs.csproj" />
+		<ProjectReference Include="..\TQVaultAE.Presentation\TQVaultAE.Presentation.csproj" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Enums.NET" Version="5.0.0" />
-    <PackageReference Include="MedallionShell" Version="1.6.2" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.2" />
-    <PackageReference Include="System.Collections" Version="4.3.0" />
-    <PackageReference Include="System.Configuration.ConfigurationManager" Version="10.0.2" />
-    <PackageReference Include="System.Text.Json" Version="10.0.2" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\TQVaultAE.Config\TQVaultAE.Config.csproj" />
-    <ProjectReference Include="..\TQVaultAE.Domain\TQVaultAE.Domain.csproj" />
-    <ProjectReference Include="..\TQVaultAE.Logs\TQVaultAE.Logs.csproj" />
-    <ProjectReference Include="..\TQVaultAE.Presentation\TQVaultAE.Presentation.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="Microsoft.VisualBasic">
-      <HintPath>C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.7.2\Microsoft.VisualBasic.dll</HintPath>
-    </Reference>
-  </ItemGroup>
+	<ItemGroup>
+		<Reference Include="Microsoft.VisualBasic">
+			<HintPath>C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.7.2\Microsoft.VisualBasic.dll</HintPath>
+		</Reference>
+	</ItemGroup>
 
 </Project>
